--- a/index.html
+++ b/index.html
@@ -14,17 +14,54 @@
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 
+
     <!-- TITLE -->
     <title>SPOTIFY</title>
 </head>
 <body>
 
-    <!-- SECTION SIDEBAR -->
+    <div class="main-container">
+        <main>
+            <!-- SECTION SIDEBAR -->
+            <aside class="sidebar">
+                <figure>
+                    <img src="./assets/img/logo.svg" alt="spotify logo big">
+                    <img src="./assets/img/logo-small.svg" alt="spotify logo small">
+                </figure>
 
+                <ul>
+                    <li><img src="./assets/img/home.svg" alt="home">Home</li>
+                    <li><img src="./assets/img/search.svg" alt="search">Cerca</li>
+                    <li><img src="./assets/img/libreria.svg" alt="libreria">La tua libreria</li>
+                </ul>
 
+                <h4>PLAYLIST</h4>
 
-    <!-- // SECTION SIDEBAR // -->
-    
-    
+                <ul>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" height="30" width="40" viewBox="0 0 448 512" fill="#434343"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM200 344V280H136c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V168c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H248v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"/></svg>Crea Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                </ul>
+
+                <div class="download">
+                    <img src="./assets/img/download.svg" alt="download"><span>Installa app</span>
+                </div>
+                <hr>
+
+                <div class="profile">
+                    <img src="./assets/img/profile.svg" alt="profile"> <span>Pierluigi Papa</span>
+                </div>
+            </aside>
+
+            <!-- // SECTION SIDEBAR // -->
+        </main>
+
+    </div>
+
 </body>
 </html>
