fit: add section upgrade

--- a/index.html
+++ b/index.html
@@ -65,7 +65,20 @@
                 </div>
             </aside>
             <!-- // SECTION SIDEBAR // -->
+
+            <!-- SECTION UPGRADE -->
+            <div id="main-content">
+                <header>
+                    <div class="top-menu">
+                        <div class="btn-upgrade">EFFETTUA L'UPGRADE</div>
+                    </div>
+                </header>
+            </div>
+            <!-- // SECTION UPGRADE // -->
+
         </div>
     </main>
+
+ 
 </body>
 </html>
