fit: add section upgrade and content menu

--- a/index.html
+++ b/index.html
@@ -66,19 +66,36 @@
             </aside>
             <!-- // SECTION SIDEBAR // -->
 
-            <!-- SECTION UPGRADE -->
             <div id="main-content">
+            <!-- SECTION UPGRADE  -->
                 <header>
                     <div class="top-menu">
                         <div class="btn-upgrade">EFFETTUA L'UPGRADE</div>
                     </div>
                 </header>
-            </div>
             <!-- // SECTION UPGRADE // -->
+
+            <!-- SECTION CONTENT MENU -->
+                <nav id="content-menu">
+                    <ul>
+                        <li><a href="#">IN EVIDENZA</a></li>
+                        <li><a href="#">PODCAST</a></li>
+                        <li><a href="#">CLASSIFICHE</a></li>
+                        <li><a href="#">GENERI E MOOD</a></li>
+                        <li><a href="#">NUOVE USCITE</a></li>
+                        <li><a href="#">SCOPRI</a></li>
+                    </ul>
+                </nav>
+            <!-- // SECTION CONTENT MENU // -->
+
+            </div>  
+
+
+
+
 
         </div>
     </main>
 
- 
 </body>
 </html>
