--- a/index.html
+++ b/index.html
@@ -88,12 +88,60 @@
                 </nav>
             <!-- // SECTION CONTENT MENU // -->
 
-            </div>  
+            <!-- SECTION RECENTLY PLAYED -->
+            <div class="recently-played">
+                <h2>Recently played</h2>
+                <section class="section-recently-played d-flex">
+                    <div class="album">
+                        <figure>
+                            <img src="./assets/img/metal_lifting.jpg" alt="">
+                        </figure>
+                        <h3>Heavy Metal</h3>
+                        <span>Subtitle</span>
+                    </div>
 
+                    <div class="album">
+                        <figure>
+                            <img src="./assets/img/stranger.jpeg" alt="">
+                        </figure>
+                        <h3>Stranger Things Vol. <br> 1 (a Netflix Original <br> series Soundtrack)</h3>
+                        <span>Kyle Dixon & Michael Stein</span>
+                    </div>
 
+                    <div class="album">
+                        <figure>
+                            <img src="./assets/img/aquietplace.jpeg" alt="">
+                        </figure>
+                        <h3>A quiet place</h3>
+                        <span>Subtitle</span>
+                    </div>
 
+                    <div class="album">
+                        <figure>
+                            <img src="./assets/img/split.jpeg" alt="">
+                        </figure>
+                        <h3>Split</h3>
+                        <span>Subtitle</span>
+                    </div>
 
-
+                    <div class="album">
+                        <figure>
+                            <img src="./assets/img/cure.jpeg" alt="">
+                        </figure>
+                        <h3>A cure for wellness</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    
+                    <div class="album">
+                        <figure>
+                            <img src="./assets/img/sinister.jpeg" alt="">
+                        </figure>
+                        <h3>Sinister</h3>
+                        <span>Subtitle</span>
+                    </div>
+                </section>
+            </div>
+            <!-- // SECTION RECENTLY PLAYED // -->
         </div>
     </main>
 
